<resources>
    <string name="app_name">Training</string>

    <string name="tab_1">室内环境</string>
    <string name="tab_2">机器人状态</string>
    <string name="tab_3">主人状态</string>
    <string name="ie_sn">室内环境分值</string>
    <string name="ie_sn_good">环境质量良好</string>
    <string name="ie_sn_wd">温度</string>
    <string name="ie_sn_sd">湿度</string>
    <string name="ie_sn_pm">PM2.5</string>
    <string name="ie_sn_kt">空调</string>
    <string name="ie_sn_js">加湿</string>
    <string name="ie_sn_jh">净化</string>

    <string name="menu1">远程遥控</string>
    <string name="menu2">地图</string>
    <string name="menu3">自定语音</string>
    <string name="menu4">文件管理</string>
    <string name="menu5">个人设置</string>

    <string name="smart1">实训模式</string>
    <string name="smart2">开始实训</string>
    <string name="smart3">中央空调</string>
    <string name="smart4">开启空调</string>
    <string name="smart5">风速</string>
    <string name="smart6">净化器</string>
    <string name="smart7">开启净化器</string>
    <string name="smart8">高速</string>
    <string name="smart8_2">静音</string>
    <string name="smart9">内循环</string>
    <string name="smart9_2">外循环</string>
    <string name="smart10">窗帘</string>
    <string name="smart11">开启窗帘</string>
    <string name="smart12">百叶窗</string>
    <string name="smart13">开启百叶窗</string>
    <string name="smart14">电灯</string>
    <string name="smart15">开启电灯</string>
    <string name="smart16">百分比</string>
    <string name="smart2_no">关闭实训</string>
    <string name="smart4_no">关闭空调</string>
    <string name="smart7_no">关闭净化器</string>
    <string name="smart11_no">关闭窗帘</string>
    <string name="smart13_no">关闭百叶窗</string>
    <string name="smart15_no">关闭电灯</string>

    <string name="login_tx"><u>注册</u></string>
    <string name="login_wjmm"><u>忘记密码</u></string>

    <string name="login_RadioButton">记住账号密码</string>

    <string name="xgtx"> 修改头像</string>
    <string name="pzsc">"   拍张上传"</string>
    <string name="bdsc">"   本地上传"</string>
    <string name="nocz">"未找到存储卡，无法存储照片！"</string>

    <string name="connect_success">连接成功</string>
    <string name="connect_fail">连接失败</string>
    <string name="connecting">连接中……</string>
    <string name="buffering">缓冲中……</string>
    <string name="no_data">网络中无数据</string>
    <string name="unknown_error">未知错误</string>
    <string name="protocal_error">协议错误</string>
    <string name="net_error">网络错误</string>
    <string name="exception_error">异常情况</string>
    <string name="unsupport_device">不支持设备</string>
    <string name="max_channel">超过最大通道数</string>
    <string name="camera_offline">采集点不在线 </string>
    <string name="ready">准备就绪</string>
    <string name="reconnect">重新连接</string>
    <string name="error_code">错误代码</string>
    <string name="read">就绪</string>
    <string name="playing">播放中……</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="usererro">用户名错误</string>
    <string name="passworderro">密码错误</string>
    <string name="NPC_D_MPI_MON_ERROR_REJECT_ACCESS">权限不够</string>


    <string name="ycyk">远程遥控</string>
    <string name="dhsd">对话设定</string>
    <string name="srmm4">网络连接错误</string>
    <string name="srmm5">机器人ID</string>
    <string name="srmm6">不能为空</string>
    <string name="srmm7">绑定被拒</string>
    <string name="srmm8">绑定成功</string>
    <string name="srmm9">连接超时</string>


    <string name="head_xl">下拉刷新</string>
    <string name="head_xl2">刷新完毕</string>
    <string name="head_sc">上次更新</string>
    <string name="head_zz">正在刷新</string>
    <string name="head_wb">下拉刷新已经加载完毕... </string>
    <string name="news">最近更新:</string>
    <string name="news2">松开刷新</string>
    <string name="news3">载入中...</string>
    <string name="news4">查看更多</string>
    <string name="news5">到头了</string>
    <string name="aaa000">#000000</string>

    <string name="srmm">请输入密码：</string>
    <string name="srmm1">密码错误</string>
    <string name="srmm2">添加成功</string>
    <string name="srmm3">请在同一网络下查找机器人...</string>
    <string name="qt">其他...</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="shuru2">是否删除</string>
    <string name="progress_per3">删除中...</string>
    <string name="progress_pergood">删除成功</string>
    <string name="progress_pergood2">删除失败</string>
    <string name="nodataerro">无数据</string>
    <string name="searching_device">正在搜索...</string>
    <string name="searching_device2">添加设备中...</string>
    <string name="searching_device3">正在登陆</string>
    <string name="qqqq">请去个人设置里绑定机器人</string>
    <string name="qqqq2">请输入机器人的信息</string>
    <string name="add_main_gl1">添加设备</string>
    <string name="name2">设备编号:</string>
    <string name="pass2">设备密码:</string>
    <string name="ybd">该设备已绑定</string>
    <string name="name_err">名字不能为空</string>
    <string name="kong_err">不能为空</string>
    <string name="robote_list">查找机器人</string>

    <string name="uid_no">请登录后再试</string>
    <string name="add_sid">添加新设备</string>
    <string name="del_sid">长按删除设备</string>
    <string name="ss_sid">正在搜索设备</string>
    <string name="pre_xgmm">修改密码</string>
    <string name="pre_tc">退出登录</string>
    <string name="pre_fk">用户反馈</string>

    <string name="personal_2">更改密码</string>
    <string name="personal_1">更改昵称</string>
    <string name="personal_3">请输入旧密码：</string>
    <string name="personal_4">输入新密码：</string>
    <string name="personal_5">确认新密码：</string>
    <string name="personal_6">退出登录</string>
    <string name="personal_7">昵称:</string>
    <string name="personal_8">请点击软键盘的确认</string>
    <string name="personal_9">检查更新</string>
    <string name="personal_10">修改手机号</string>
    <string name="personal_11">验证信息</string>
    <string name="personal_12">机器人扫码登录</string>

    <string name="eu_gd">更多设置</string>
    <string name="eu_tv">所属房间</string>
    <string name="eu_tv1">设备类型</string>
    <string name="eu_tv2">软件版本</string>
    <string name="eu_tv3">硬件版本</string>
    <string name="eu_tv4">检查更新</string>
    <string name="eu_tv5">初始化数据</string>

    <string name="light_a_tv1">亮度</string>
    <string name="light_a_tv2">色温</string>
    <string name="tips_scan">将二维码/条码放入框内，即可自动扫描</string>
    <string name="tips_scan_debug">解析图像每秒%1$d帧，平均耗时%2$dms</string>
    <string name="scan">扫码</string>
    <string name="scan_debug">扫码(DEBUG)</string>
    <string name="flash_open">开启闪光灯</string>
    <string name="flash_close">关闭闪光灯</string>

    <string name="condition">选择条件</string>
    <string name="condition1">如果满足某个条件时</string>
    <string name="condition2">比如：有人移动时</string>
    <string name="condition3">通用</string>
    <string name="condition4">手动执行</string>
    <string name="condition5">室外天气发生变化时</string>
    <string name="condition6">智能设备</string>
    <string name="condition7">筛选</string>
    <string name="condition8">定时</string>


    <string name="carride_out1">选择执行结果</string>
    <string name="carride_out2">如果条件满足时就做什么</string>
    <string name="carride_out3">比如：打开主卧灯</string>
    <string name="carride_out4">执行某条智能</string>
    <string name="carride_out5">向手机发送通知</string>
    <string name="carride_out6">延时</string>


    <string name="new_intelligent1">新建智能</string>
    <string name="new_intelligent2">☰ 如果</string>
    <string name="new_intelligent3">继续添加</string>
    <string name="new_intelligent4">→ 就执行</string>
    <string name="new_intelligent5">生效时间段</string>
    <string name="new_intelligent6">全天</string>

    <string name="outdoor_weather">室外天气</string>
    <string name="outdoor_weather1">日出/日落</string>
    <string name="outdoor_weather2">室外温度</string>
    <string name="outdoor_weather3">室外湿度</string>
    <string name="outdoor_weather4">室外PM2.5</string>
    <string name="outdoor_weather7">日出时</string>
    <string name="outdoor_weather8">日落时</string>
    <string name="outdoor_weather9">高于指定温度</string>
    <string name="outdoor_weather10">低于指定温度</string>
    <string name="outdoor_weather11">高于指定湿度</string>
    <string name="outdoor_weather12">低于指定湿度</string>
    <string name="outdoor_weather13">高于指定浓度</string>
    <string name="outdoor_weather14">低于指定浓度</string>
    <string name="ss_ts">添加失败且连搜不上设备，请长按开关键重置设备\n如果是在连接不上设备wifi，请去系统列表里删除设备wifi的配置</string>

</resources>
