<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_48.0">
            <ImageView
                android:id="@+id/condition_fh"
                android:background="@drawable/fh"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dip_10.0"
                android:layout_width="@dimen/dip_40.0"
                android:layout_height="@dimen/dip_40.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_centerInParent="true"
                android:textSize="@dimen/dip_18.0"
                android:text="@string/condition"
                />



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_100.0">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition1"
                android:textSize="@dimen/dip_25.0"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dip_20.0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition2"
                android:textSize="@dimen/dip_15.0"
                android:layout_centerHorizontal="true"
                android:textColor="@color/hu2"
                android:layout_marginTop="@dimen/dip_60.0"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_0.5"
            android:background="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/dip_18.0"
            android:text="@string/condition3"
            android:layout_marginTop="@dimen/dip_40.0"
            android:layout_marginBottom="@dimen/dip_20.0"
            android:layout_marginLeft="@dimen/dip_10.0"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#f0f0f0"
            />

        <RelativeLayout
            android:id="@+id/condition_layout1"
            android:layout_marginRight="@dimen/dip_10.0"
            android:layout_marginLeft="@dimen/dip_20.0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_70.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/dip_18.0"
                android:text="@string/condition4"
                android:layout_centerVertical="true"
                />

            <LinearLayout

                android:gravity="center"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/dip_30.0"
                    android:layout_height="@dimen/dip_30.0"
                    android:background="@drawable/gengduo"
                    />
            </LinearLayout>

        </RelativeLayout>
        <TextView
            android:id="@+id/condition_xian"
            android:layout_marginLeft="@dimen/dip_10.0"
            android:layout_marginRight="@dimen/dip_10.0"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#f0f0f0"
            />

        <RelativeLayout
            android:id="@+id/condition_layout2"
            android:layout_marginRight="@dimen/dip_10.0"
            android:layout_marginLeft="@dimen/dip_20.0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_70.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/dip_18.0"
                android:text="@string/condition8"
                android:layout_centerVertical="true"
                />

            <LinearLayout

                android:gravity="center"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/dip_30.0"
                    android:layout_height="@dimen/dip_30.0"
                    android:background="@drawable/gengduo"
                    />
            </LinearLayout>

        </RelativeLayout>
        <TextView
            android:layout_marginLeft="@dimen/dip_10.0"
            android:layout_marginRight="@dimen/dip_10.0"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#f0f0f0"
            />

        <RelativeLayout
            android:id="@+id/condition_layout3"
            android:layout_marginRight="@dimen/dip_10.0"
            android:layout_marginLeft="@dimen/dip_20.0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_70.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/dip_18.0"
                android:text="@string/condition5"
                android:layout_centerVertical="true"
                />

            <LinearLayout

                android:gravity="center"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/dip_30.0"
                    android:layout_height="@dimen/dip_30.0"
                    android:background="@drawable/gengduo"
                    />
            </LinearLayout>

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#f0f0f0"
            />

        <RelativeLayout
            android:id="@+id/condition_sx"
            android:layout_marginTop="@dimen/dip_40.0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_50.0">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0"
                />
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dip_18.0"
                android:text="@string/condition6"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/dip_10.0"
                android:layout_centerVertical="true"
                />

            <TextView
                android:visibility="gone"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dip_18.0"
                android:text="@string/condition7"
                android:textColor="@color/c_1eac94"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dip_15.0"

                />

        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>