<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_000000"
    android:orientation="vertical">

    <!--<include layout="@layout/layout_toolbar" />-->
    <RelativeLayout
        android:background="@color/app_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_48.0"
        >

        <ImageView
            android:onClick="fanhui"
            android:layout_width="@dimen/dip_40.0"
            android:layout_height="@dimen/dip_40.0"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dip_10.0"
            android:background="@drawable/fh" />

        <TextView
            android:id="@+id/sp_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_12"
            android:textColor="#fff"
            android:textSize="@dimen/dip_18.0" />


    </RelativeLayout>

    <cn.simonlee.xcodescanner.view.MaskConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:frame_viewid="@id/scannerframe">

        <cn.simonlee.xcodescanner.view.AdjustTextureView
            android:id="@+id/textureview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <cn.simonlee.xcodescanner.view.ScannerFrameView
            android:id="@+id/scannerframe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:frame_whRatio="1"
            app:frame_widthRatio="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33"
            app:scan_cycle="1500" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gray_translucent"
            android:padding="5dp"
            android:text="@string/tips_scan"
            android:textColor="@color/gray_light_lv5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scannerframe" />

        <Button
            android:id="@+id/btn_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash_open"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/scannerframe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </cn.simonlee.xcodescanner.view.MaskConstraintLayout>
</LinearLayout>
