<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/app_bg"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_48.0">
            <ImageView
                android:id="@+id/outdoor_weather_fh"
                android:background="@drawable/fh"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dip_10.0"
                android:layout_width="@dimen/dip_40.0"
                android:layout_height="@dimen/dip_40.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_centerInParent="true"
                android:textSize="@dimen/dip_18.0"
                android:text="@string/outdoor_weather"
                />



        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_marginTop="@dimen/dip_20.0"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#f0f0f0"
                    />

                <RelativeLayout
                    android:id="@+id/outdoor_weather_layout1"
                    android:layout_marginRight="@dimen/dip_10.0"
                    android:layout_marginLeft="@dimen/dip_20.0"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dip_70.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dip_18.0"
                        android:text="@string/outdoor_weather1"
                        android:layout_centerVertical="true"
                        />

                    <LinearLayout

                        android:gravity="center"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="@dimen/dip_30.0"
                            android:layout_height="@dimen/dip_30.0"
                            android:background="@drawable/gengduo"
                            />
                    </LinearLayout>

                </RelativeLayout>
                <TextView
                    android:layout_marginLeft="@dimen/dip_10.0"
                    android:layout_marginRight="@dimen/dip_10.0"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#f0f0f0"
                    />

                <RelativeLayout
                    android:id="@+id/outdoor_weather_layout2"
                    android:layout_marginRight="@dimen/dip_10.0"
                    android:layout_marginLeft="@dimen/dip_20.0"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dip_70.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dip_18.0"
                        android:text="@string/outdoor_weather2"
                        android:layout_centerVertical="true"
                        />

                    <LinearLayout

                        android:gravity="center"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="@dimen/dip_30.0"
                            android:layout_height="@dimen/dip_30.0"
                            android:background="@drawable/gengduo"
                            />
                    </LinearLayout>

                </RelativeLayout>
                <TextView
                    android:layout_marginLeft="@dimen/dip_10.0"
                    android:layout_marginRight="@dimen/dip_10.0"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#f0f0f0"
                    />

                <RelativeLayout
                    android:id="@+id/outdoor_weather_layout3"
                    android:layout_marginRight="@dimen/dip_10.0"
                    android:layout_marginLeft="@dimen/dip_20.0"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dip_70.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dip_18.0"
                        android:text="@string/outdoor_weather3"
                        android:layout_centerVertical="true"
                        />

                    <LinearLayout

                        android:gravity="center"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="@dimen/dip_30.0"
                            android:layout_height="@dimen/dip_30.0"
                            android:background="@drawable/gengduo"
                            />
                    </LinearLayout>

                </RelativeLayout>
                <TextView
                    android:layout_marginLeft="@dimen/dip_10.0"
                    android:layout_marginRight="@dimen/dip_10.0"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#f0f0f0"
                    />

                <RelativeLayout
                    android:id="@+id/outdoor_weather_layout4"
                    android:layout_marginRight="@dimen/dip_10.0"
                    android:layout_marginLeft="@dimen/dip_20.0"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dip_70.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dip_18.0"
                        android:text="@string/outdoor_weather4"
                        android:layout_centerVertical="true"
                        />

                    <LinearLayout

                        android:gravity="center"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="@dimen/dip_30.0"
                            android:layout_height="@dimen/dip_30.0"
                            android:background="@drawable/gengduo"
                            />
                    </LinearLayout>

                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#f0f0f0"
                    />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>